--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ nav:
 
 - Linked Data:
     - Contexts: 'linked-data/contexts.md'
+    - Profiles: 'linked-data/profiles.md'
+    - Schemas: 'linked-data/schemas.md'
     - Vocabularies: 'linked-data/vocabularies.md'
     - Ontologies: 'linked-data/ontologies.md'
-    - Schemas: 'linked-data/schemas.md'
-    - Reference: 'linked-data/reference.md'
