--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ theme:
 plugins:
   - search
   - table-reader
+  - include-markdown
 
 extra_css:
   - stylesheets/extra.css
@@ -91,7 +92,7 @@ nav:
   - 'Protocol': 'api/protocol.md'
   - 'Authentication': 'api/authentication.md'
   - 'Rate Limiting': 'api/rate_limiting.md'
-  - 'Requests': 'api/requests.md'
+  - 'Requests (Endpoints)': 'api/requests.md'
   - 'Responses': 'api/responses.md'
   - 'Parameters': 'api/parameters.md'
   - 'Model Context Protocol': 'api/model_context_protocol.md'
@@ -102,5 +103,3 @@ nav:
     - Contexts: 'linked-data/contexts.md'
     - Profiles: 'linked-data/profiles.md'
     - Schemas: 'linked-data/schemas.md'
-    - Vocabularies: 'linked-data/vocabularies.md'
-    - Ontologies: 'linked-data/ontologies.md'
