--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -1,5 +1,7 @@
 mkdocs>=1.5.0
 mkdocs-material>=9.0.0
 mkdocs-git-revision-date-localized-plugin>=1.2.0
+mkdocs-markdownextradata-plugin>=0.2.0
+mkdocs-include-markdown-plugin>=0.6.0
 pymdown-extensions>=10.0.0
 jsonschema>=4.0.0 
