--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ mkdocs-material>=9.0.0
 mkdocs-git-revision-date-localized-plugin>=1.2.0
 mkdocs-markdownextradata-plugin>=0.2.0
 mkdocs-include-markdown-plugin>=0.6.0
+mkdocs-table-reader-plugin>=0.1.0
 pymdown-extensions>=10.0.0
 jsonschema>=4.0.0 
